Istio/yaml/ing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ing-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ing-gtwy-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - ing-gateway
  http:
  - name: "Healthcare"    
    match:
    - uri:
        prefix: "/healthcare"
    rewrite:
      uri: "/Patient"
    route:
    - destination:
        host: healthcare-api-service.nm.svc.cluster.local
  - name: "Hospital"    
    match:
    - uri:
        prefix: "/hospital"       
    route:
    - destination:
        host: hospital-api-service.nm.svc.cluster.local         
  - name: "Catch-all-route"  
    rewrite:
      uri: "/Patient"
    route:
    - destination:
        host: healthcare-api-service.nm.svc.cluster.local
